# yetga

./: README.md  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm_inference.cpp  whisper_inference.cpp
app/src/main/java/com/jarvis/app/: MainActivity.kt
app/src/main/java/com/jarvis/app/data/: AppPreferences.kt  Models.kt
app/src/main/java/com/jarvis/app/engine/: LlamaEngine.kt  SpeechEngine.kt  TTSEngine.kt  WhisperEngine.kt
app/src/main/java/com/jarvis/app/navigation/: NavRoutes.kt
app/src/main/java/com/jarvis/app/repository/: HuggingFaceRepository.kt
app/src/main/java/com/jarvis/app/service/: JarvisAccessibilityService.kt  JarvisService.kt
app/src/main/java/com/jarvis/app/ui/screens/: ChatScreen.kt  DownloadScreen.kt  ModelsScreen.kt  SettingsScreen.kt
app/src/main/java/com/jarvis/app/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/jarvis/app/viewmodel/: MainViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  backup_rules.xml  data_extraction_rules.xml  file_paths.xml
gradle/: libs.versions.toml
